# gspot_auth

./: .gitignore  README.md  models.py  pyproject.toml  redis_client.py  requirements.txt  token.py
example/: .env.tests  Dockerfile  docker-compose.tests.yml  requirements.txt
example/app/: factory.py  views.py
example/example_project/: factory.py  settings.py  tests.py  urls.py
gspot_auth/: authentication.py  exceptions.py
gspot_django_auth/: authentication.py  exceptions.py  models.py  permissions.py  redis_client.py  token.py
gspot_django_auth/management/commands/: load_test_tokens.py
gspot_django_auth/permissions/: __init__.py  permissons.py  validators.py  verifiers.py
